--- a/.github/workflows/CI-CD-pipeline.yml
+++ b/.github/workflows/CI-CD-pipeline.yml
@@ -22,7 +22,7 @@ jobs:
         dotnet-version: '8.0.x'
 
     - name: Restore API Nuget packages
-      run: dotnet restore src/PENGA.API/PENGA.API.csproj
+      run: dotnet restore Penga.sln
 
     - name: Build API solution
-      run: dotnet build src/PENGA.API/PENGA.API.csproj --configuration Release --no-restore
+      run: dotnet build Penga.sln --configuration Release --no-restore
