--- a/.github/workflows/CI-CD-pipeline.yml
+++ b/.github/workflows/CI-CD-pipeline.yml
@@ -8,14 +8,18 @@ on:
 
 jobs:
 
-  build-api:
-
+  checkout-code:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      
+  build-api:
+    needs: checkout-code
+    runs-on: ubuntu-latest
 
+    steps:
     - name: Set up .NET 8
       uses: actions/setup-dotnet@v1
       with:
@@ -26,3 +30,21 @@ jobs:
 
     - name: Build API solution
       run: dotnet build Penga.sln --configuration Release --no-restore
+      
+  build-ui:
+    needs: checkout-code
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Set up Node 20
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20.x'
+
+    - name: Install npm dependencies
+      run: npm install
+      working-directory: ./src/penga-ui
+    
+    - name: Build NextJS app
+      run: npm run build
+      working-directory: ./src/penga-ui
