--- a/.github/workflows/CI-CD-pipeline.yml
+++ b/.github/workflows/CI-CD-pipeline.yml
@@ -43,8 +43,8 @@ jobs:
 
     - name: Install npm dependencies
       run: npm install
-      working-directory: ./src/penga-ui
+      working-directory: src/penga-ui
     
     - name: Build NextJS app
       run: npm run build
-      working-directory: ./src/penga-ui
+      working-directory: src/penga-ui
