--- a/.github/workflows/CI-CD-pipeline.yml
+++ b/.github/workflows/CI-CD-pipeline.yml
@@ -61,6 +61,7 @@ jobs:
       
   deploy-api:
     runs-on: ubuntu-latest
+    needs: build-api
 
     steps:
     - name: Download artifact from build
