Disable restore and build on dotnet publish

--- a/.github/workflows/CI-CD-pipeline.yml
+++ b/.github/workflows/CI-CD-pipeline.yml
@@ -31,7 +31,7 @@ jobs:
       run: dotnet build Penga.sln --configuration Release --no-restore
       
     - name: Publish
-      run: dotnet publish -c Release -o ${{ env.DOTNET_ROOT }}/app
+      run: dotnet publish -c Release -o ${{ env.DOTNET_ROOT }}/app  --no-restore --no-build
       
     - name: Upload artifact for deployment
       uses: actions/upload-artifact@v4
