--- a/.github/workflows/CI-CD-pipeline.yml
+++ b/.github/workflows/CI-CD-pipeline.yml
@@ -59,6 +59,12 @@ jobs:
       run: npm run build
       working-directory: src/penga-ui
       
+    - name: Upload artifact for deployment
+      uses: actions/upload-artifact@v4
+      with:
+        name: penga-ui
+        path: src/penga-ui
+      
   deploy-api:
     runs-on: ubuntu-latest
     needs: build-api
@@ -76,3 +82,27 @@ jobs:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
         publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+        
+  deploy-ui:
+    runs-on: ubuntu-latest
+    needs: build-ui
+    
+    steps:
+    - name: Download artifact from build
+      uses: actions/download-artifact@v4
+      with:
+        name: penga-ui
+        
+    - name: Deploy
+        id: builddeploy
+        uses: Azure/static-web-apps-deploy@v1
+        with:
+          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APP_DEPLOY_TOKEN }}
+          repo_token: ${{ secrets.GITHUB_TOKEN }} # Used for Github integrations (i.e. PR comments)
+          action: "upload"
+          ###### Repository/Build Configurations - These values can be configured to match your app requirements. ######
+          # For more information regarding Static Web App workflow configurations, please visit: https://aka.ms/swaworkflowconfig
+          app_location: "." # App source code path
+          api_location: "" # Api source code path - optional
+          output_location: "" # Built app content directory - optional
+          ###### End of Repository/Build Configurations ######
