Added SQL Server database setup using EF Core

--- a/src/Penga.API/Penga.API.csproj
+++ b/src/Penga.API/Penga.API.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Penga.Application\Penga.Application.csproj" />
     <ProjectReference Include="..\Penga.Contracts\Penga.Contracts.csproj" />
+    <ProjectReference Include="..\Penga.Infrastructure\Penga.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
