--- a/src/Penga.API/appsettings.json
+++ b/src/Penga.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "PengaDb": "connection-string"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
