--- a/src/Penga.Infrastructure/Penga.Infrastructure.csproj
+++ b/src/Penga.Infrastructure/Penga.Infrastructure.csproj
@@ -7,12 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentValidation" Version="11.9.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.8" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Penga.Contracts\Penga.Contracts.csproj" />
-    <ProjectReference Include="..\Penga.Infrastructure\Penga.Infrastructure.csproj" />
+    <ProjectReference Include="..\Penga.Domain\Penga.Domain.csproj" />
   </ItemGroup>
 
 </Project>
