--- a/.github/workflows/CI-CD-pipeline.yml
+++ b/.github/workflows/CI-CD-pipeline.yml
@@ -66,6 +66,7 @@ jobs:
         path: src/penga-ui/out
       
   deploy-api:
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: build-api
 
@@ -84,6 +85,7 @@ jobs:
         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
         
   deploy-ui:
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: build-ui
     
