--- a/src/Penga.API/appsettings.json
+++ b/src/Penga.API/appsettings.json
@@ -8,5 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EntraID": {
+    "Instance": "https://login.microsoftonline.com",
+    "ClientId": "ClientId",
+    "TenantId": "TenantId"
+  }
 }
