--- a/.github/workflows/CI-CD-pipeline.yml
+++ b/.github/workflows/CI-CD-pipeline.yml
@@ -81,7 +81,9 @@ jobs:
       with:
         files: appsettings.json
       env:
-        ConnectionStrings.PengaDb: ${{ secrets.PENGA_DB_CONNECTION_STRING }}
+        ConnectionStrings.PengaDb: ${{ secrets.PENGA_DB_CONNECTION_STRING }},
+        EntraID.ClientId: ${{ secrets.ENTRA_ID_CLIENT_ID }},
+        EntraID.TenantId: ${{ secrets.ENTRA_ID_TENANT_ID }},
         
     - name: Deploy to Azure App Service
       id: deploy-to-webapp
@@ -101,6 +103,12 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: penga-ui
+
+    - name: Create .env file
+      run: |
+        echo NEXT_PUBLIC_ENTRA_ID_CLIENT_ID=${{ secrets.ENTRA_ID_CLIENT_ID }} >> .env
+        echo NEXT_PUBLIC_ENTRA_ID_TENANT_ID=${{ secrets.ENTRA_ID_TENANT_ID }} >> .env
+        echo NEXT_PUBLIC_PENGA_API_BASE_URL=${{ secrets.PENGA_API_BASE_URL }} >> .env
         
     - name: Deploy
       id: deploy
