Add buttons for login and logout

--- a/src/penga-ui/staticwebapp.config.json
+++ b/src/penga-ui/staticwebapp.config.json
@@ -8,8 +8,11 @@
           }
         }
       },
-      "login": {
-        "route": "/login"
-      }
+      "routes": [
+            {
+                "route": "/",
+                "allowedRoles": ["anonymous"]
+            }
+        ]
     }
   }
