Update SWA auth config

--- a/src/penga-ui/staticwebapp.config.json
+++ b/src/penga-ui/staticwebapp.config.json
@@ -3,7 +3,7 @@
         "identityProviders": {
             "azureActiveDirectory": {
                 "registration": {
-                    "openIdIssuer": "https://login.microsoftonline.com/{ENTRA_ID_TENANT_ID}",
+                    "openIdIssuer": "https://login.microsoftonline.com/<ENTRA_ID_TENANT_ID>/v2.0",
                     "clientIdSettingName": "ENTRA_ID_CLIENT_ID",
                     "clientSecretSettingName": "ENTRA_ID_CLIENT_SECRET"
                 }
