--- a/src/penga-ui/package.json
+++ b/src/penga-ui/package.json
@@ -10,14 +10,14 @@
     "clean": "cache clean --force"
   },
   "dependencies": {
-    "next": "14.2.14",
+    "@azure/msal-browser": "^3.24.0",
+    "next": "14.2.9",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
-    "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "eslint": "^8",
-    "eslint-config-next": "14.2.14",
+    "eslint-config-next": "14.2.9",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
