--- a/.github/workflows/CI-CD-pipeline.yml
+++ b/.github/workflows/CI-CD-pipeline.yml
@@ -56,6 +56,12 @@ jobs:
     - name: Install npm dependencies
       run: npm install
       working-directory: src/penga-ui
+      
+    - name: Create .env file
+      run: |
+        echo "NEXT_PUBLIC_ENTRA_ID_CLIENT_ID=${{ secrets.ENTRA_ID_CLIENT_ID }}" >> .env
+        echo "NEXT_PUBLIC_ENTRA_ID_TENANT_ID=${{ secrets.ENTRA_ID_TENANT_ID }}" >> .env
+        echo "NEXT_PUBLIC_PENGA_API_BASE_URL=${{ secrets.PENGA_API_BASE_URL }}" >> .env
     
     - name: Build NextJS app
       run: npm run build
